# rs2014-dl

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/crossfud/: Cargo.toml
crates/crossfud/src/: lib.rs
crates/crossfud/src/clients/: cacher.rs  downloader.rs  fetcher.rs  mod.rs  traits.rs  uploader.rs
crates/crossfud/src/drivers/: dropbox.rs  gdrive.rs  mega.rs  mod.rs  traits.rs
crates/crossfud/src/drivers/shared/: downloader.rs  traits.rs
crates/ignition/: Cargo.toml
crates/ignition/src/: cache.rs  fetch.rs  lib.rs  main.rs
crates/ignition/src/models/: mod.rs  track.rs
src/: fetcher.rs  lib.rs  main.rs
src/apis/: download.rs  fetch.rs  mod.rs
src/drivers/: ignition.rs  mod.rs
src/drivers/ignition/: download.rs  fetch.rs  mod.rs  upload.rs
src/drivers/shared/: downloader.rs  fetcher.rs  mod.rs  traits.rs  uploader.rs
src/models/: track.rs
