[package]
name = "rs2014"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.16", features = ["blocking", "json", "cookies", "brotli"]}
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = "1.27.0"

easydev = { git = "https://github.com/dyanechi/easydev-rs" }
