[package]
name = "crossfud"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

easydev = { git = "https://github.com/dyanechi/easydev-rs" }